1.02.14
Bugfix: History buttons are displaying total energy without thermal, and calling it total.
    Added a thermal energy readout, and fix the total energy value to reflect all energy (not just mechanical energy).

1.02.13 (11-10-2006)
Set the bounciness to correspond to the bounciness slider.
Set the minimum mass of the skater to 1.0 kg.
Fixed a bug that caused save/load to fail sometimes.

1.02.12 (11-8-2006)
Bugfix: When you move from space to earth the "use arrow keys to thrust" stays up.
Bugfix: When I pulled up energy vs time graph, and messed around with pausing, using cursor, and trying to go again ... it got confused. (Right now I can't get the guy to start moving again ... even when I hit Reset.)
Added friction for bounces, when friction is enabled.
            Added coefficient of restitution as a nonlinear function of friction coefficient.
Added insurance that the skater won't pass through a spline while in free-fall.
Removed some bogus collision code (for handling ends of spline).
Added code that prevents the skater from bouncing back and forth centered on a track.
Added save/load for splines & skaters.
Added roller-coaster mode (sticky tracks).
Deleted some spline traversal code that caused the skater to get stuck. 

1.02.11 (11-3-2006)
Made the "Return The Skater" button pop up when the skater is partially offscreen (rather than when he is completely offscreen).
Bugfix: The man jiggles around when on a nearly horizontal piece of track.

1.02.10 (11-3-2006)
Added a "Step" button to playback, live, and record modes.
Added another mechanism to reduce energy errors in spline traversal mode.
            This prevents the problem where the skater gets stuck at a high point at slow velocity.

1.02.09 (11-2-2006)
Improvements in spline traversal.
Consolidate top/bottom splines.
Rewrote Track Toolbox to work at different scales.
Track Toolbox code is more elegant.
Fixed: Dragging a control point of the skater's track can cause him to freeze.