@@ -5,11 +5,6 @@ Remaining Work
 After some combination of recording and playback, the track graphic becomes dissociated from the skater.
         The skater will continue to traverse the path where the track used to be, ever after it has been dragged.
         
--When coefficient of friction is turned to maximum and there is a lot of
-gravity (maximum) the skater falls through the track at the bottom point and
-bounces around the bottom of the screen before shooting off in a random direction 
-(his exact reaction varies each time).
-
 -If the friction menu is opened or the skater reset during the simulation
 the arrow keys to control thrust will scroll (up and down) the side menu as well (as far as I
 know this does NOT happen with the Skater Properties menu).
@@ -33,6 +28,12 @@ Load is throwing an exception, "body.debug angles inconsistent"
                
 - slow motion button doesn't seem to work right
         Clarifying...
+
+-When coefficient of friction is turned to maximum and there is a lot of
+gravity (maximum) the skater falls through the track at the bottom point and
+bounces around the bottom of the screen before shooting off in a random direction 
+(his exact reaction varies each time).
+        This problem is partially reduced.  Friction + Gravity + Track Curvature increases probability of getting this problem.
 #################################################################
 Low Priority or Deprecated
 #######################################
